fixed image stretch

--- a/src/styles/headerBar.css
+++ b/src/styles/headerBar.css
@@ -1,6 +1,6 @@
 .header-bar-img {
-  display: flex;
-  width: 100%;   
+  width: 100%;
+  height: 100px;   
   line-height: 0;
 } 
 
@@ -16,4 +16,16 @@
   align-self: center;
   margin-top: 0px;
   font-weight: bold;
+}
+
+@media screen and (min-width: 1024px){  
+  .header-bar-img {
+    height: 150px;
+  } 
+}
+
+@media screen and (min-width: 1400px){  
+  .header-bar-img {
+    height: 200px;
+  } 
 }
