--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -143,7 +143,7 @@ button:hover:enabled {
     flex-flow: row wrap;
     padding: 10px 20px;
   } 
-  section, .answer-submit-form, form, img {
+  section, .answer-submit-form, form, img, .login-img-container {
     width: 49%;
     flex-grow: 1;
   }
